# LegoSeq

./: Cargo.toml
src/: main.rs  sequence.rs  utils.rs
test/: barcode.fasta  config.csv  test.R3.fastq
